Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40602

QPainter::CompositionMode_SourceAtop not implemented for direct2d

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 Beta
    • 5.3.1
    • QPA: Direct2D
    • None
    • 3bcbff57e127af37ecf00ed1ab4682b1a9a21bd1

      QPainter &painter; = ...
      painter.setCompositionMode( QPainter::CompositionMode_SourceAtop );

      This code causes an qWarning and is not executed due to
      qtbase\src\plugins\platforms\direct2d\qwindowsdirect2dpaintengine.cpp, l. 394
      qWarning("Unsupported composition mode: %d", mode);

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andrew.knight Andrew Knight
            louai Louai Al-Khanji
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes